Fixed responsiveness on mobile devices

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,9 +9,8 @@ h1 {
     font-family: 'Comfortaa', cursive;
     font-weight: bold;
     margin-top: 300px;
-    font-size: 1rem;
+    font-size: 6rem;
     text-align: center;
-
 }
 
 h3, h4 {
@@ -19,19 +18,21 @@ h3, h4 {
     text-align: center;
 }
 
-@media (min-width: 576px) {
+@media (max-width: 575.98px) {
     h1 {
         color: #7ECA9C;
         font-family: 'Comfortaa', cursive;
         font-weight: bold;
-        margin-top: 300px;
-        font-size: 1rem;
+        margin-top: 200px;
+        margin-bottom: 20px;
+        font-size: 4rem;
         text-align: center;
     }
 
     h3, h4 {
         color: #CCFFBD;
         text-align: center;
+        margin-bottom: 20px;
     }
 }
 
